@@ -1,3 +1,8 @@
+2002-01-22  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/vfs/pathutil.py (Archive.listdir): fixed cut-and-paste
+	error.
+
 2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/Makefile.in (DEMO_FILES, DEMO_DIRS): fix so that the
